--- a/package.json
+++ b/package.json
@@ -92,8 +92,7 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
-    "start:dev": "node scripts/start.js",
-    "start": "NODE_ENV=production node server/prodServer.js",
+    "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --watchAll=false",
     "test:watch": "node scripts/test.js --coverage --watchAll=true",
