--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "PORT=8080 node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --watchAll=false",
     "test:watch": "node scripts/test.js --coverage --watchAll=true",
