--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
@@ -80,6 +81,8 @@
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "style-loader": "0.23.1",
     "svg-inline-loader": "^0.8.0",
     "terser-webpack-plugin": "1.2.3",
